2017-10-12  Bruno Haible  <bruno@clisp.org>

	Guarantee a page boundary between the growing and shrinking heap_limits
	in case of GENERATIONAL_GC && SPVW_MIXED_BLOCKS.
	* spvw_allocate.d (make_space_gc_true, make_space_gc_false): Round to
	physpagesize, not map_pagesize, if GENERATIONAL_GC is enabled.
	* spvw_fault.d (handle_fault): Drop the requirement that
	SIGSEGV_FAULT_ADDRESS_ALIGNMENT be 1.
	* lispbibl.d (GENERATIONAL_GC): Define without considering the value of
	SIGSEGV_FAULT_ADDRESS_ALIGNMENT.

2017-10-12  Bruno Haible  <bruno@clisp.org>

	Fix mistake in "highest bit number" test (regression from 2017-10-08).
	* m4/mmap.m4 (CL_MMAP): Update after value of cache variable changed.
	* aclocal.m4, src/configure: Regenerated.

2017-10-08  Bruno Haible  <bruno@clisp.org>

	Update to the newest gnulib.
	Ran "make -f Makefile.devel build-aux-update gnulib-imported \
	&& make -f Makefile.devel build-prerequisites".
	* gllib/*: Update from gnulib.

2017-10-08  Bruno Haible  <bruno@clisp.org>

	Define mappable address range for many platforms.
	* lispbibl.d (UNIX_GNU_FREEBSD, UNIX_IRIX): New macros.
	(MAPPABLE_ADDRESS_RANGE_START, MAPPABLE_ADDRESS_RANGE_END): Define for
	many platforms.
	(ADDRESS_RANGE_RANDOMIZED): Don't define on OpenBSD.

2017-10-08  Bruno Haible  <bruno@clisp.org>

	New option "-marc" for mappable address range check.
	* spvw.d (mappable_address_range_check): New function.
	(parse_options): New option "-marc".
	* makemake.in: New target 'marc.out'.
	(all): Depend on it.
	(clean1): Remove it.

2017-10-08  Bruno Haible  <bruno@clisp.org>

	Emit the output of "lisp.run -mm" to stdout, not stderr.
	* win32.d (DumpProcessMemoryMap): Accept a FILE* argument.
	* win32aux.d (DumpProcessMemoryMap): Likewise.
	* spvw.d (dump_process_memory_map_callback): Likewise.
	(dump_process_memory_map): Likewise.
	(parse_options): Pass stdout.
	* spvw_mmap.d (warn_before_reserving_range, mmap_prepare): Pass stderr.

2017-10-08  Bruno Haible  <bruno@clisp.org>
