@@ -2436,19 +2436,25 @@ typedef enum {
     #define MAPPABLE_ADDRESS_RANGE_END   0x5EFFFFFFUL
   #endif
   #if defined(UNIX_SUNOS5) && defined(I80386)
-    /* On Solaris/x86_64 with 32-bit ABI:
+    /* On Solaris 10/x86_64 with 32-bit ABI:
        MMAP_FIXED_ADDRESS_HIGHEST_BIT = 30
        CODE_ADDRESS_RANGE   = 0x08000000UL
        MALLOC_ADDRESS_RANGE = 0x08000000UL
        SHLIB_ADDRESS_RANGE  = 0xFE000000UL
        STACK_ADDRESS_RANGE  = 0x08000000UL
+       On Solaris 11/x86_64 with 32-bit ABI:
+       MMAP_FIXED_ADDRESS_HIGHEST_BIT = 30
+       CODE_ADDRESS_RANGE   = 0x08000000UL
+       MALLOC_ADDRESS_RANGE = 0x08000000UL
+       SHLIB_ADDRESS_RANGE  = 0xFE000000UL
+       STACK_ADDRESS_RANGE  = 0xFE000000UL
        There is room from 0x09000000UL to 0xFE000000UL, but let's keep some
        distance. */
     #define MAPPABLE_ADDRESS_RANGE_START 0x10000000UL
     #define MAPPABLE_ADDRESS_RANGE_END   0xEFFFFFFFUL
   #endif
   #if defined(UNIX_SUNOS5) && defined(SPARC)
-    /* On Solaris/sparc64 with 32-bit ABI:
+    /* On Solaris 10/sparc64 with 32-bit ABI:
        MMAP_FIXED_ADDRESS_HIGHEST_BIT = 30
        CODE_ADDRESS_RANGE   = 0x00000000UL
        MALLOC_ADDRESS_RANGE = 0x00000000UL
@@ -2693,18 +2699,24 @@ typedef enum {
     #define MAPPABLE_ADDRESS_RANGE_END   0x7FFFFFFFFFFFFFFFUL
   #endif
   #if defined(UNIX_SUNOS5) && defined(AMD64)
-    /* On Solaris/x86_64:
+    /* On Solaris 10/x86_64:
        MMAP_FIXED_ADDRESS_HIGHEST_BIT = 46
        CODE_ADDRESS_RANGE   = 0x0000000000000000UL
        MALLOC_ADDRESS_RANGE = 0x0000000000000000UL
        SHLIB_ADDRESS_RANGE  = 0xFFFFFD7FFF000000UL
        STACK_ADDRESS_RANGE  = 0xFFFFFD7FFF000000UL
+       On Solaris 11/x86_64:
+       MMAP_FIXED_ADDRESS_HIGHEST_BIT = 46
+       CODE_ADDRESS_RANGE   = 0x0000000000000000UL
+       MALLOC_ADDRESS_RANGE = 0x0000000000000000UL
+       SHLIB_ADDRESS_RANGE  = 0xFFFF80FFBF000000UL
+       STACK_ADDRESS_RANGE  = 0xFFFF80FFBF000000UL
        There is room from 0x0000000100000000UL to 0x00007FFF00000000UL. */
     #define MAPPABLE_ADDRESS_RANGE_START 0x0000000100000000UL
     #define MAPPABLE_ADDRESS_RANGE_END   0x00007FFEFFFFFFFFUL
   #endif
   #if defined(UNIX_SUNOS5) && defined(SPARC64)
-    /* On Solaris/sparc64:
+    /* On Solaris 10/sparc64:
        MMAP_FIXED_ADDRESS_HIGHEST_BIT = 46
        CODE_ADDRESS_RANGE   = 0x0000000100000000UL
        MALLOC_ADDRESS_RANGE = 0x0000000100000000UL
